changer mot de passe pour les users ainsi changer le mot de passe par les employees apres first login ajoutés

--- a/client/src/components/client/SideBar.css
+++ b/client/src/components/client/SideBar.css
@@ -365,3 +365,14 @@ body.sidebar-collapsed .client-page-wrapper {
   margin-left: 64px;  
   width: calc(100vw - 64px);  
 }
+
+
+.dropdown-separator {  
+  height: 1px;  
+  background-color: #e9ecef;  
+  margin: 8px 0;  
+}  
+  
+.dropdownItem:hover {  
+  background-color: #f8f9fa;  
+}
